Refactor cache warmer scripts for improved logging, error handling, and performance reporting

--- a/sites.conf
+++ b/sites.conf
@@ -1,3 +1,6 @@
+# This file lists all sites to be warmed.
+# Format: domain.com sitemap_path
+# The script will construct the URL as https://domain.com/sitemap_path
 workever.com sitemap_index_freq-.xml
 workever.com sitemap_index.xml
 assess.com sitemap_index.xml
