Enhance cache warmer scripts with Origin IP support and replace wget with curl for improved consistency and functionality

--- a/sites.conf
+++ b/sites.conf
@@ -77,4 +77,6 @@ www.mpvrentals.com sitemap.xml
 #staging2.sculpiflex.com sitemap.xml "45425,45426,45461,45474,45475,45430,45431"
 #sculpiflex-demo.wpspeedopt.net sitemap.xml "45425,45426,45461,45474,45475,45430,45431"
 sculpiflex.com sitemap.xml
-wowflow.com sitemap_index.xml
+wowflow.com sitemap_index.xml 65.21.223.206
+wowflow.com/de sitemap_index.xml 65.21.223.206
+wowflow.com/it sitemap_index.xml 65.21.223.206
